--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,33 @@
 body {
-    font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
-    margin: 2em;
-    background-color: white;
-  }
-  .container {
-    display: block;
-    margin: 60px auto;
-    text-align: center;
-    font-size: 12px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    width: 80vw;
-    background-color: whitesmoke;
-    padding-top: 20px;
-    border-color: black;
-    border-radius: 5px;
-  }
+  font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
+  margin: 1em;
+  background-color: white;
+}
+
+.container {
+  display: block;
+  margin: 60px auto;
+  text-align: center;
+  line-height: 0.5;
+  font-size: 14px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  width: 80vw;
+  background-color: white;
+  padding-top: 60px;
+  border-style: solid;
+  border-color: black;
+  border-radius: 5px;
+}
+
+.Start-Quiz {
+  display: block;
+  margin: 60px auto;
+  text-align: center;
+  font-size: 14px;
+  font-weight: bold;
+  color: white;
+  background-color: purple;
+  border-color: black;
+  border-radius: 5px;
+}
